# AppImageKit

./: meson.build  meson_options.txt
resources/: meson.build
src/: CMakeLists.txt  meson.build  runtime.c
