appimagetool_desktop = files(
    'appimagetool.desktop',
)

install_data(
    appimagetool_desktop,
    install_dir: 'share/applications',
    install_tag: 'appimagetool',
)

appimagetool_icon = files(
    'appimagetool.png',
)

install_data(
    appimagetool_icon,
    install_dir: 'share/icons/hicolor/128x128/apps',
    install_tag: 'appimagetool',
)

appdata_xml = files(
    'usr/share/metainfo/appimagetool.appdata.xml',
)

install_data(
    appdata_xml,
    install_dir: 'share/metainfo',
    install_tag: 'appimagetool',
)
